# not-quite-a-demo-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO  build.sh  imgui.ini  main  makefile
resources/FastNoise2/: Makefile  cmake_install.cmake
resources/FastNoise2/NoiseTool/: Makefile  cmake_install.cmake
resources/FastNoise2/src/: Makefile  cmake_install.cmake
resources/ImGUI/: TextEditor.cc  TextEditor.h
resources/ImageHandling/: Image.h  image.h
resources/ImageHandling/fpng/: CMakeLists.txt
resources/SoftRast/: SoftRast.h
resources/TinyOBJLoader/: objLoader.cc  objLoader.h
resources/VAT/: VAT.h
resources/code/: engine.cc  engine_utils.cc  includes.h  main.cc  rtiow.cc  rtiow.h  rtiow_utils.cc  rttnw.cc  rttnw.h  rttnw_utils.cc  sdf.cc  sdf_utils.cc
resources/code/shaders/: blit.fs.glsl
resources/debug/: debug.h
resources/engineCode/: config.json  engine.cc  engine.h  engineImguiUtils.cc  engineInit.cc  engineUtils.cc  image.h  includes.h  inputHander.h  inputHandler.h  main.cc  timer.h
resources/engineCode/shaders/: dummyDraw.cs.glsl  font.cs.glsl  shader.h  sponza.fs.glsl  sponza.vs.glsl  tonemap.cs.glsl
resources/engineCode/shaders/lib/: shader.h  shaderWrapper.h  tonemap.glsl
resources/engine_code/: engine.cc  engine.h  engine_imgui_utils.cc  engine_init.cc  engine_utils.cc  includes.h  main.cc
resources/engine_code/shaders/: blit.fs.glsl  blit.vs.glsl
resources/fonts/fontRenderer/: renderer.h
resources/kajott_bluenoise/: bluenoise.h
resources/noise/: perlin.cc  perlin.h
resources/ocornut_imgui/: imgui_impl_opengl3.cc
resources/perlin/: perlin.cc
scripts/: build.sh  cloneSubmoduleAdd.sh
src/ImGUI/: TextEditor.cc
src/ImageHandling/: Image.h
src/SoftRast/: SoftRast.h
src/data/: bayer.h  colors.h  glyphLoader.h  paletteLoader.h  wordlistLoader.h
src/debug/: debug.h
src/engine/: config.json  dataStructs.h  engine.cc  engine.h  engineImguiUtils.cc  engineInit.cc  engineUtils.cc  includes.h
src/engine/coreUtils/: bindset.h  image.h  timer.h  window.h
src/engine/shaders/lib/: shaderWrapper.h
src/engineCode/: engineImguiUtils.cc  engineInit.cc
src/fonts/: colors.h  glyphLoader.h  paletteData.json  paletteLoader.h
src/fonts/fontRenderer/: renderer.h
src/trident/: trident.h  tridentCopy.cs.glsl  tridentGenerate.cs.glsl
